syntax = "proto3";
package exomonad.effects.kv;

// Key-value storage effects.
// Provides persistent per-project KV store backed by .exomonad/kv/ files.

// ============================================================================
// Get - Read a value by key
// ============================================================================

message GetRequest {
  // Key to look up (alphanumeric, underscore, hyphen only).
  string key = 1;
}

message GetResponse {
  // True if the key was found.
  bool found = 1;
  // Value associated with the key (empty if not found).
  string value = 2;
}

// ============================================================================
// Set - Write a value for a key
// ============================================================================

message SetRequest {
  // Key to write (alphanumeric, underscore, hyphen only).
  string key = 1;
  // Value to store.
  string value = 2;
}

message SetResponse {
  // True if the write succeeded.
  bool success = 1;
}

// ============================================================================
// Service definition (for schema generation, not gRPC)
// ============================================================================

service KvEffects {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Set(SetRequest) returns (SetResponse);
}
